# OllamaAMDNPU

./: .gitignore  LICENSE  README.md
docs/: phase-16-power-characterization.md  phase-16a-baseline.json  phase-16b-final.json  phase-16b-vulkan.json  phase-17-prefill-baseline.md  phase-17b-results.md  phase-17c-results.md
docs/superpowers/: chess-toolchain-status.md  power-baseline.md
docs/superpowers/plans/: 2026-03-28-phase10-bo-prestaging.md  2026-03-30-phases-13-16-design.md  2026-04-01-phase17-prefill-baseline.md
docs/superpowers/specs/: 2026-03-28-phase10-design.md  2026-03-30-phases-13-16-design.md  2026-04-01-phase17-prefill-baseline-design.md  2026-04-01-phase17b-prefill-xclbin-design.md
docs/xdna-npu/: index.html  phase1.html  phase11.html  phase12.html  phase2.html  phase3.html  phase4.html  phase5.html  phase6.html  phase7.html  phase8.html  phase9.html  research-survey.html
ggml/: CMakeLists.txt
ggml/include/: ggml-xdna.h
ggml/src/: CMakeLists.txt
ggml/src/ggml-xdna/: CMakeLists.txt  ggml-xdna-quant.h  ggml-xdna.cpp  test-xdna-correctness.cpp
ggml/src/ggml-xdna/tests/: test-xdna-correctness.cpp
scripts/: measure-power.sh
tools/: bench-context.sh  bench-power.sh  build-prefill-xclbins.sh  env-template.sh  int4_quant_sanity.c  int4_quant_sanity.py  setup-check.sh  validate-prefill-env.sh
tools/sweep/: sweep.sh
tools/trace/: build-trace-xclbin.sh  parse-trace.sh  run-trace.sh  xclbin-manifest.json
